syntax = "proto3";

service BibleService {
  rpc GetBibleVersions (GetBibleVersionsRequest) returns (GetBibleVersionsResponse) {}
  rpc GetBibleBooks (GetBibleBooksRequest) returns (GetBibleBooksResponse) {}
  rpc GetBibleChapters (GetBibleChaptersRequest) returns (GetBibleChaptersResponse) {}
  rpc GetBibleVerses (GetBibleVersesRequest) returns (GetBibleVersesResponse) {}
  rpc GetVerseComparison (GetVerseComparisonRequest) returns (GetVerseComparisonResponse) {}
}

message GetBibleVersionsRequest {}

message GetBibleVersionsResponse {
  repeated string versions = 1;
}

message GetBibleBooksRequest {
  int32 version_id = 1;
}

message GetBibleBooksResponse {
  repeated string books = 1;
}

message GetBibleChaptersRequest {
  string book = 1;
  int32 version_id = 2;
}

message GetBibleChaptersResponse {
  repeated int32 chapters = 1;
}

message GetBibleVersesRequest {
  string book = 1;
  int32 chapter = 2;
  int32 version_id = 3;
}

message GetBibleVersesResponse {
  repeated Verse verses = 1;
}

message Verse {
  string version = 1;
  string book = 2;
  int32 chapter = 3;
  int32 verse = 4;
  string content = 5;
}

message GetVerseComparisonRequest {
  string book = 1;
  int32 chapter = 2;
  int32 verse = 3;
  repeated int32 version_ids = 4;
}

message GetVerseComparisonResponse {
  repeated Verse verses = 1;
}
